# billatory

./: .gitignore  README.md  index.html  logic.md  package.json  tsconfig.json  vite.config.ts
public/: bill.html  payment-slip.html
public/test/: bill.html  bill2.html  bulk-bill.html  bull-bill2.html  payment-slip.html  payment2.html
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: charges.rs  classes.rs  database.rs  fees.rs  helpers.rs  main.rs  payment.rs  settings.rs  state.rs  students.rs
src/components/@extended/: AnimateButton.tsx  Breadcrumbs.tsx  Dot.tsx  Transitions.tsx
src/components/Logo/: Logo.tsx  index.tsx
src/components/layouts/: FormContainer.tsx  MainCard.tsx  ScrollTop.tsx
src/components/shared/: index.tsx
src/context/: app-theme.tsx  settings.tsx  sideBar.tsx  snackBar.tsx
src/hooks/: snack-bar.hooks.tsx
src/layout/: MainLayout.tsx  MinimalLayout.tsx
src/pages/: Dashboard.tsx  Loading.tsx  NotFoundPage.tsx  Setup.tsx
src/pages/charges/: ApplyCharges.tsx  ListCharges.tsx
src/pages/class/: ListClasses.tsx
src/pages/fees/: ListFees.tsx  (+1 more)
src/routes/: index.ts  main.routes.tsx  other.routes.tsx  path.ts
src/services/: charge.service.ts  class.service.ts  fees.service.ts  payment.service.ts  settings.service.ts  student.service.ts
src/themes/: index.tsx  palette.ts  shadows.ts  typography.ts
src/types/: index.ts
src/utils/: Loadable.tsx  SyntaxHighlight.tsx  constants.ts  helper-function.ts  password-strength.ts  template-helpers.ts
(+126 files in other folders)
