[package]
name = "student-billing"
version = "0.0.0"
description = "Student Billing System"
authors = ["Aashis Maharjan"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }
tauri = { version = "1.4.1", features = ["window-print", "window-create", "shell-open"] }
serde = { version = "^1.0.0", features = ["derive"] }
serde_json = "^1.0.0"
chrono = "^0.4.0"
log = "^0.4.0"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
bcrypt = "^0.15.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
cargo-audit = "0.18.3"
